# study-solana-arbitrage-bot

./: .gitignore  LICENSE  readme.md
design/: readme.md
reference/: raydium_info.json
solana-arbitrage-bot/: Cargo.toml  refresh.rs
solana-arbitrage-bot/src/: bot.rs  config.rs  constants.rs  lib.rs  main.rs  refresh.rs
solana-arbitrage-bot/src/dex/: mod.rs
